--- a/arKitBilder.csproj
+++ b/arKitBilder.csproj
@@ -93,6 +93,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\menuScript.cs" />
     <Compile Include="Assets\Scripts\Booton.cs" />
     <Compile Include="Assets\Scripts\Drag2.cs" />
     <Compile Include="Assets\Scripts\MouseLook.cs" />
